[package]
name = "pi_async_file"
version = "0.6.0"
authors = ["zuon<zuon@yinengyun.com>"]
edition = "2018"
description = "A async file tools library."
repository = "https://github.com/GaiaWorld/pi_async_file"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async", "future", "file", "fs"]

[dependencies]
parking_lot = "0.12"
pi-async-rt = "0.1"
crossbeam-utils = "0.8"
sysinfo = "0.29"
normpath = "1.1"